test/fail/lambdas/lambda_optargs.lly
#[
SyntaxError: Expected 'a label', not '*'.
    from lambda_optargs.lly:6:
]#

var v = (|a: *Integer=10| a )
